# graficoredsocial

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  start.sh
graficoredsocial/: db_operations.py
graficoredsocial/database/: __init__.py  connection.py  memgraph.py  models.py
static/js/: index.js  query.js
templates/: base.html  query.html
