[tool.poetry]
name = "graficoredsocial"
version = "0.1.0"
description = ""
authors = ["MiguelAngelNarvaez <mignarvaez@umariana.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.1"
pymgclient ="^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
